unpackaged/objects/PayPal_TokenInfo__mdt.object
<CustomObject>
    <fields>
        <fullName>access_token__c</fullName>
        <label>access_token</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>app_id__c</fullName>
        <label>app_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expires_in_seconds__c</fullName>
        <label>expires_in_seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>expires_in_time__c</fullName>
        <label>expires_in_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nonce__c</fullName>
        <label>nonce</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scope__c</fullName>
        <label>scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>token_type__c</fullName>
        <label>token_type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>PayPal TokenInfo</label>
    <pluralLabel>PayPal TokenInfo</pluralLabel>
</CustomObject>